more css and width fixes to make it look better on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,9 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
+html, body{
+	height: 100%;
+	margin:0;
 }
 
 .App-header {
@@ -54,7 +55,7 @@
 		width: 40%;
 	}
 }
-@media only screen and (max-width:1830px){
+@media only screen and (max-width:1230px){
 	.sort{
 		display:inline-block;
 		width: 45%;
@@ -74,10 +75,36 @@
 	.sort{
 		display:inline-block;
 		width: 90%;
-		height: 60%;
+		height: 350px;
 	}
 	.main{
 		height:100%;
+	}
+	.sortMain{
+		height: 350px;
+		padding-left:0px;
+		padding-right:0px;
+	}
+	.bar{
+		width: 2px !important
+	}
+}
+@media only screen and (max-width:500px){
+	.sort{
+		display:inline-block;
+		width: 90%;
+		height: 400px;
+	}
+	.main{
+		height:100%;
+	}
+	.sortMain{
+		height: 350px;
+		padding-left:0px;
+		padding-right:0px;
+	}
+	.bar{
+		width: 2px;
 	}
 }
 .sortContainer{
@@ -86,7 +113,6 @@
 }
 .main{
 	background-color: #121660;
-	height: 95vh;
 	margin-top: -2px;
 }
 
@@ -98,6 +124,7 @@
 	border-color: #000;
 	border-width: 1px;
 	display:inline-block;
+	width:4px;
 }
 
 .sortMain{
